--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,109 +1,239 @@
 :root {
-    /*** FONTS ***/
-    --alata: 'Alata', sans-serif;
-    --josefin-sans: 'Josefin Sans', sans-serif;
+  /*** FONTS ***/
+  --alata: "Alata", sans-serif;
+  --josefin-sans: "Josefin Sans", sans-serif;
 
-    /*** COLORS ***/
-    --white: hsl(0, 0%, 100%);
-    --black: hsl(0, 0%, 0%);
-    --dark-gray: hsl(0, 0%, 55%);
-    --very-dark-gray: hsl(0, 0%, 41%);
+  /*** COLORS ***/
+  --white: hsl(0, 0%, 100%);
+  --black: hsl(0, 0%, 0%);
+  --dark-gray: hsl(0, 0%, 55%);
+  --very-dark-gray: hsl(0, 0%, 41%);
 }
 
 /*---------- GENERAL RULES ----------*/
 
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 body {
-    font-size: 15px;
+  font-size: 15px;
+  font-family: var(--alata);
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 button {
-    background: transparent;
+  background: transparent;
+  cursor: pointer;
 }
 
 a {
-    color: var(--white);
-    font-family: var(--josefin-sans);
+  color: var(--white);
+  font-family: var(--josefin-sans);
+  text-decoration: none;
 }
 
-h1, h2, h3 {
-    font-family: var(--josefin-sans);
+h1,
+h2,
+h3 {
+  font-family: var(--josefin-sans);
+  text-transform: uppercase;
 }
 
 .container {
-    width: 90%;
-    margin: 0 auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
 /*---------- HEADER ----------*/
 
 .hero {
-    background-image: url('../images/mobile/image-hero.jpg');
-    height: 100vh;
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 3em 0;
+  background-image: url("../images/mobile/image-hero.jpg");
+  height: 100vh;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 3em 0;
 }
 
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-logo {
-    width: 150px;
+  width: 150px;
 }
 
 .nav-menu {
-    position: absolute;
-    background: var(--black);
-    padding: 3em 0;
-    width: 0;
-    overflow: hidden;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    transition: .4s;
+  position: absolute;
+  background: var(--black);
+  padding: 3em 0;
+  width: 0;
+  overflow: hidden;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  transition: 0.4s;
 }
 
 .show-menu {
-    width: 100vw;
+  width: 100vw;
 }
 
 .nav-item {
-    margin-bottom: 1.8em;
+  margin-bottom: 1.8em;
 }
 
 .nav-menu .nav-link {
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1.5rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 1.5rem;
 }
 
 .menu-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 150px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 150px;
 }
 
 .menu-button {
-    border: none;
+  border: none;
 }
 
 .hero-title {
-    color: var(--white);
-    text-transform: uppercase;
-    font-size: 2.8em;
-    border: 1px solid var(--white);
-    padding: .5em;
-    margin-top: 4em;
+  color: var(--white);
+  font-size: 2.8em;
+  border: 1px solid var(--white);
+  padding: 0.5em;
+  margin-top: 4em;
+}
+
+/*---------- INFO SECTION ----------*/
+
+.info-section {
+  padding: 7em 0 3em 0;
+}
+
+.info-box {
+  text-align: center;
+  padding: 1em;
+  margin: 2em auto;
+}
+
+.info-title {
+  font-size: 2rem;
+  margin-bottom: 0.5em;
+}
+
+.info-text {
+  line-height: 1.8em;
+  color: var(--dark-gray);
+  font-size: 0.9rem;
+}
+
+/*---------- CREATIONS SECTION ----------*/
+
+.creations-container {
+  display: grid;
+  gap: 1.5em;
+}
+
+.creations-title {
+  font-size: 2em;
+  text-align: center;
+  margin-bottom: 1.8em;
+}
+
+.creations-picture {
+  position: relative;
+  cursor: pointer;
+}
+
+.creations-picture img {
+  transition: all 0.2s ease-in-out;
+}
+
+.creations-picture:hover img {
+  opacity: 0.2;
+  content: none;
+}
+
+.creations-picture:hover .picture-text {
+  color: var(--black);
+}
+
+.creations-picture:hover::before {
+  display: none;
+}
+
+.creations-picture::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
+}
+
+.picture-text {
+  position: absolute;
+  font-size: 1.6em;
+  color: var(--white);
+  width: 140px;
+  margin-top: 15%;
+  margin-left: 5%;
+  transition: all 0.2s ease-in-out;
+}
+
+.creations-button {
+  width: 55%;
+  height: 50px;
+  text-transform: uppercase;
+  font-family: var(--alata);
+  letter-spacing: 0.3em;
+  font-size: 1.2rem;
+  border: 2px solid black;
+  text-align: center;
+  display: block;
+  margin: 2em auto 5em auto;
+  transition: all 0.4s ease-in-out;
+}
+
+.creations-button:hover {
+  background: var(--black);
+  color: white;
+}
+
+/*---------- FOOTER ----------*/
+
+.footer {
+  background-color: var(--black);
+  color: var(--dark-gray);
+  text-align: center;
+  padding: 3.5em 0;
+}
+
+.footer-menu {
+  margin: 1.8em auto;
+  font-size: 1.5rem;
+}
+
+.footer-item {
+  margin: 0.8em auto;
+}
+
+.social-bar {
+  display: flex;
+  justify-content: center;
+  gap: 1.5em;
+  margin: 1.5em auto;
 }
