--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -49,6 +49,7 @@ h3 {
 .container {
   width: 80%;
   margin: 0 auto;
+  max-width: 1100px;
 }
 
 /*---------- HEADER ----------*/
@@ -80,7 +81,7 @@ h3 {
   left: 0;
   top: 0;
   height: 100vh;
-  transition: 0.4s;
+  transition: all 0.2s;
 }
 
 .show-menu {
@@ -181,7 +182,7 @@ h3 {
   content: "";
   display: block;
   width: 100%;
-  height: 100%;
+  height: 98%;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
   transition: all 0.2s ease-in-out;
 }
@@ -358,7 +359,9 @@ h3 {
   }
 
   /*---------- CREATIONS SECTION ----------*/
-  .creations-section {
+
+  .creations-section .container {
+    padding: 0;
     position: relative;
   }
 
@@ -375,10 +378,15 @@ h3 {
   .creations-button {
     position: absolute;
     top: 0;
-    right: 10%;
+    right: 0;
     margin: 0;
-    width: 12%;
+    width: 200px;
     height: 35px;
+    font-size: 1rem;
+  }
+
+  .creations-picture::before {
+    height: 100%;
   }
 
   /*---------- FOOTER ----------*/
